[gd_scene load_steps=2 format=3 uid="uid://72bj5vsskpjt"]

[ext_resource type="Script" path="res://ui_elements/listed_component/listed_component.gd" id="1_tvkbm"]

[node name="ListedComponent" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1040.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_tvkbm")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "X"

[node name="ComponentLabel" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"SettingsLabel"
theme_override_font_sizes/font_size = 24
text = "Unnamed Component"

[node name="MetricOptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "voltage"
popup/item_1/text = "current"
popup/item_1/id = 1
popup/item_2/text = "power"
popup/item_2/id = 2
popup/item_3/text = "energy"
popup/item_3/id = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
color = Color(1, 0, 0, 1)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
